option java_outer_classname="GetCacheBindingCommandProtocol";

package Alachisoft.NCache.Common.Protobuf;

message GetCacheBindingCommand {
	optional int64 requestId = 1;
	optional string cacheId = 2;
	optional bool isRunning = 3; 
	optional string userId = 4 [default="dummyUID"];
	optional string pwd = 5 [default="dummyPwd"];
	optional bool isJavaClient = 6 [default=true];
	optional bytes binaryUserId = 7;
	optional bytes binaryPassword = 8;
}
