import "KeyValuePair.proto";

option java_outer_classname="GetRunningServersResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;

message GetRunningServersResponse {
	repeated KeyValuePair keyValuePair = 1;
}